# mono-multi

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
mono_multi/: __init__.py  metrics.py  plotting.py  setup.py  utils.py
mono_multi/baseline/: __init__.py  base.py  benchmark.py  launch_experiments_baseline_htcondor.py  run_benchmark_baseline.py  utils.py
notebooks/: acs_tasks.ipynb  schematic.ipynb
notebooks/same-prompt/: few-shot-num-shots.ipynb  fig1_ACSIncome-agreement-recourse.ipynb  fig2_agreement-recourse.ipynb  fig3_no_recourse.ipynb  general-performance-0vs10.ipynb  general-performance.ipynb  zero-shot-disaggregated.ipynb
notebooks/vary-prompt/: fig4_effect_general_performance.ipynb  fig5_effect_general_agreement_recourse.ipynb
requirements/: cluster.txt  main.txt  tests.txt
results/: .matplotlibrc
